# hera_filters

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  codecov.yml  environment.yml  pyproject.toml  setup.py
.github/workflows/: check-build.yaml  labels.yml  publish.yaml  python-package-conda.yml  release-drafter.yml  tests.yml
examples/: dayenu_demo.ipynb  linear_clean_demo.ipynb
hera_filters/: __init__.py  backend.py  dspec.py  version.py
hera_filters/data/: __init__.py  noiselike_eor_diff.uvh5  simulated_eor.uvh5  uvd1.uvh5  uvd2.uvh5  uvd_1d_freqs.uvh5  uvd_1d_times.uvh5  uvd_1d_uvws.uvh5  uvd_bad_ants.uvh5  uvd_bad_bls.uvh5  uvd_bad_chan_width.uvh5  uvd_bad_int_time.uvh5
hera_filters/tests/: test_dspec.py
